--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -415,7 +415,9 @@ img {
     transform: translateX(100px); 
   }
   .contact__container {
-    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;  /* Two columns */
+    gap: 20px;
   }
 }
 @media screen and (min-width: 768px) {
