--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -343,6 +343,15 @@ img {
   margin-left: auto;
 }
 
+.contact__text-description {
+    font-size: 16px;
+    color: #555;
+}
+
+.contact__text {
+    padding: 20px;
+}
+
 /* ===== FOOTER =====*/
 .footer {
   background-color: var(--second-color);
