--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -434,7 +434,7 @@ img {
     font-size: 16px;
     line-height: 1.6;
     padding: 20px; /* Optional: Adds padding */
-    background-color: #f9f9f9; /* Optional: Adds background */
+    gap: 20px;
     border-radius: 8px; /* Optional: Adds rounded corners */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow effect */
 }
