--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -433,7 +433,7 @@ img {
     font-size: 28px;
     line-height: 1.6;
     padding-top: 2rem;
-    padding: 20px; /* Optional: Adds padding */
+   /* Optional: Adds padding */
     gap: 20px;
     border-radius: 8px; /* Optional: Adds rounded corners */
 }
